@@ -1,3 +1,4 @@
+- docs: document events/logs system
 - fix race condition when installing/removing shield
 - fix cargo skip of weight check for some items
 - code: use constants for delayes, shiptypes, jobtypes and cargo items to further improve readability
